--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
   "author": "Procore",
   "license": "MIT",
   "scripts": {
+    "test:watch": "mocha -r babel-core/register -w test/**/**/**/*.spec.js",
+    "test": "mocha -r babel-core/register -w test/**/**/**/*.spec.js",
     "server": "node -r babel-core/register -r dotenv/config server/main.js",
-    "server:watch": "nodemon -r babel-core/register -r dotenv/config server/main.js",
+    "server:watch": "nodemon --ignore client --ignore public -r babel-core/register -r dotenv/config server/main.js",
     "rollup:watch": "rollup --watch -c",
     "rollup:build": "rollup -c"
   },
   "dependencies": {
+    "alphanum-sort": "^1.0.2",
     "dotenv": "^4.0.0",
     "hapi": "^16.1.0",
+    "hapi-auth-cookie": "^6.1.1",
     "hapi-react-views": "^9.2.1",
     "inert": "^4.1.0",
+    "joi": "^10.2.0",
     "material-ui": "^0.16.7",
+    "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
+    "reflexbox": "^2.2.3",
+    "string": "^3.3.3",
     "typescript": "^2.1.5",
+    "uuid": "^3.0.1",
     "vision": "^4.1.1"
   },
   "devDependencies": {
@@ -30,6 +39,8 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-register": "^6.22.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
     "nodemon": "^1.11.0",
     "rollup": "^0.41.4",
     "rollup-plugin-babel": "^2.7.1",
