--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "node-procore-example",
+  "name": "node-procore-boilerplate",
   "version": "1.0.0",
   "description": "Example app showcasing procore node package",
-  "main": "index.js",
+  "main": "server/main.js",
   "author": "Procore",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:procore/node-procore-boilerplate.git"
+  },
   "scripts": {
     "test:watch": "mocha -r babel-core/register -w test/**/**/**/*.spec.js",
     "test": "mocha -r babel-core/register -w test/**/**/**/*.spec.js",
