--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "ramda": "^0.23.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-inspector": "^1.1.2",
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "react-tap-event-plugin": "^2.0.1",
@@ -58,7 +59,6 @@
     "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-watch": "^3.2.2",
-    "lerna": "2.0.0-beta.37"
+    "rollup-watch": "^3.2.2"
   }
 }
