--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,7 +18,7 @@
     "@material-ui/core": "4.5.1",
     "@material-ui/icons": "4.5.1",
     "@material-ui/styles": "4.5.0",
-    "@procore/js-sdk": "2.3.0",
+    "@procore/js-sdk": "file:.yalc/@procore/js-sdk",
     "react": "16.10.2",
     "react-app-polyfill": "1.0.4",
     "react-dom": "16.10.2",
