--- a/packages/server/.env.example
+++ b/packages/server/.env.example
@@ -1,9 +1,10 @@
-PROCORE_SERVER=https://app.procore.com
-
-REDIRECT_URL=http://localhost:4050/oauth/procore/callback
 CLIENT_ID=
 CLIENT_SECRET=
 
-HOSTNAME=localhost
-PORT=4050
-SESSION_PASSWORD=asdf
+BASE_URL=https://api.procore.com
+OAUTH_URL=https://login.procore.com
+
+REDIRECT_URI=http://localhost:3000/oauth/procore/callback
+PORT=3000
+
+SESSION_PASSWORD=Strong#$Pass1298
