--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,7 +15,7 @@
     "format": "prettier --config ./../../prettier.config.js --write **/*.{js,jsx}"
   },
   "dependencies": {
-    "@procore/js-sdk": "file:.yalc/@procore/js-sdk",
+    "@procore/js-sdk": "3.0.1",
     "cookie-parser": "1.4.5",
     "cookie-session": "1.4.0",
     "dotenv": "8.2.0",
