--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serve": "lerna run serve"
   },
   "devDependencies": {
-    "lerna": "4.0.0"
+    "lerna": "4.0.0",
+    "prettier": "2.3.1"
   }
 }
