Remove format command that doesnt work

--- a/package.json
+++ b/package.json
@@ -7,11 +7,9 @@
   "scripts": {
     "build": "lerna run build",
     "start": "lerna run start",
-    "format": "lerna run format",
     "serve": "lerna run serve"
   },
   "devDependencies": {
-    "lerna": "4.0.0",
-    "prettier": "2.3.1"
+    "lerna": "4.0.0"
   }
 }
