--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,24 +12,25 @@
   "scripts": {
     "build": "NODE_ENV=production webpack",
     "start": "NODE_ENV=development webpack --watch",
-    "format": "prettier --config ./../../prettier.config.js --write **/*.{js,jsx}"
+    "format": "prettier --config ../../prettier.config.js --write ."
   },
   "dependencies": {
-    "@material-ui/core": "4.11.3",
+    "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
-    "@material-ui/styles": "4.11.3",
+    "@material-ui/styles": "4.11.4",
     "axios": "0.21.1",
-    "react": "17.0.1",
+    "react": "17.0.2",
     "react-app-polyfill": "2.0.0",
-    "react-dom": "17.0.1",
-    "react-inspector": "5.1.0",
+    "react-dom": "17.0.2",
+    "react-inspector": "5.1.1",
     "react-router-dom": "5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "7.13.10",
+    "@babel/core": "7.14.6",
     "babel-loader": "8.2.2",
     "babel-preset-react-app": "10.0.0",
-    "webpack": "5.26.3",
-    "webpack-cli": "4.5.0"
+    "prettier": "2.3.2",
+    "webpack": "5.41.0",
+    "webpack-cli": "4.7.2"
   }
 }
