--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "nodemon -r dotenv/config -r esm ./bin/www",
     "serve": "node -r dotenv/config -r esm ./bin/www",
-    "format": "prettier --no-error-on-unmatched-pattern --config ./../../prettier.config.js --write **/*.{js,jsx}"
+    "format": "prettier --config ../../prettier.config.js --write ."
   },
   "dependencies": {
     "@procore/js-sdk": "3.0.1",
@@ -27,6 +27,7 @@
     "pug": "3.0.2"
   },
   "devDependencies": {
-    "nodemon": "2.0.7"
+    "nodemon": "2.0.7",
+    "prettier": "2.3.2"
   }
 }
