--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@procore/js-sdk-sample-app",
+  "version": "1.2.0",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -11,6 +12,5 @@
   },
   "devDependencies": {
     "lerna": "5.5.2"
-  },
-  "version": "0.0.0"
+  }
 }
