--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "version": "1.1.0",
-  "npmClient": "yarn",
+  "npmClient": "npm",
   "parallel": true,
   "useWorkspaces": true,
   "packages": ["packages/*"]
