--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@procore/js-sdk-sample-app",
+  "version": "1.2.0",
   "private": true,
   "workspaces": [
     "packages/*"
@@ -10,6 +11,6 @@
     "serve": "lerna run serve"
   },
   "devDependencies": {
-    "lerna": "4.0.0"
+    "lerna": "5.5.2"
   }
 }
