--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,8 +10,8 @@
     "url": "git@github.com:procore/js-sdk-sample-app.git"
   },
   "scripts": {
-    "build": "NODE_ENV=production webpack",
-    "start": "NODE_ENV=development webpack --watch",
+    "build": "cross-env NODE_ENV=production webpack",
+    "start": "cross-env NODE_ENV=development webpack --watch",
     "format": "prettier --config ../../prettier.config.js --write ."
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "@babel/core": "7.14.6",
     "babel-loader": "8.2.2",
     "babel-preset-react-app": "10.0.0",
+    "cross-env": "^7.0.3",
     "prettier": "2.3.2",
     "webpack": "5.41.0",
     "webpack-cli": "4.7.2"
