--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,13 +21,14 @@
     "dotenv": "8.2.0",
     "esm": "3.2.25",
     "express": "4.17.3",
+    "form-data": "^4.0.0",
     "http-errors": "1.8.0",
     "http-proxy": "1.18.1",
     "morgan": "1.10.0",
     "pug": "3.0.2"
   },
   "devDependencies": {
-    "nodemon": "2.0.20",
+    "nodemon": "^3.0.1",
     "prettier": "2.3.2"
   }
 }
